--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <header></header>
+    <div class="mv">
+        <div class="item active">
+            <img src="./assets/img/268151.jpg" alt>
+        </div>
+        <div class="item">
+            <img src="./assets/img/IMG_20230521_150118.jpg" alt>
+        </div>
+        <div class="item">
+            <img src="./assets/img/LINE_ALBUM_第5回新人ハッカソン_231011.jpg" alt>
+        </div>
+    </div>
 </body>
-<script src="./assets/js/script.js"></script>
+</html>
+<script src="https://yubinbango.github.io/yubinbango/yubinbango.js"charset="UTF-8"></script>
+<script src="./assets/js/script.js" defer></script>
+</body>
 </html>
