--- a/index.html
+++ b/index.html
@@ -10,15 +10,68 @@
     <header></header>
     <div class="mv">
         <div class="item active">
-            <img src="./assets/img/268151.jpg" alt>
+            <img class="mainImage" src="./assets/img/268151.jpg" alt>
         </div>
         <div class="item">
-            <img src="./assets/img/IMG_20230521_150118.jpg" alt>
+            <img class="mainImage" src="./assets/img/IMG_20230521_150118.jpg" alt>
         </div>
         <div class="item">
-            <img src="./assets/img/LINE_ALBUM_第5回新人ハッカソン_231011.jpg" alt>
+            <img class="mainImage" src="./assets/img/LINE_ALBUM_第5回新人ハッカソン_231011.jpg" alt>
         </div>
     </div>
+    <!-- おすすめスポットセクション -->
+    <div class="wrapper grid">
+        <div class="">
+            <img src="./assets/img/hakone9.webp" alt="">
+            <h2 class="spot-title">湯元温泉</h2>
+            <p>奈良時代に開湯し、1200年の歴史をもつ湯本温泉。いまも温泉が自然湧出する箱根最古の温泉郷です。肌に優しいアルカリ性温泉で、無色透明、無味無臭のため老若男女問わず入浴可能。</p>
+        </div>
+        <div class="">
+            <img src="assets/img/oowaku.webp" alt="">
+            <h2 class="spot-title">大涌谷</h2>
+            <p>40万年前から続く火山活動で形成された箱根屈指の景勝地。大涌谷駅や大涌谷くろたまご館、箱根ジオミュージアムなど、ショッピングやグルメ、見どころが充実。</p>
+        </div>
+        <div class="">
+            <img src="assets/img/hakonejinnja.webp" alt="">
+            <h2 class="spot-title">箱根神社</h2>
+            <p>勝負運や出世運、金運、恋愛運など多様なご利益が期待でき、関東屈指のパワースポットといわれています。本宮に続く５つの鳥居と、芦ノ湖に立つ「平和の鳥居」が見どころ。</p>
+        </div>
+        <div class="">
+            <img src="assets/img/roopuway.webp" alt="">
+            <h2 class="spot-title">箱根ロープウェイ</h2>
+            <p>早雲山駅から桃源台駅まで、約20分間の空中散歩ができるロープウェイ。途中の大涌谷では標高1,044mまで登り、芦ノ湖や富士山など箱根ならではの絶景が広がります。</p>
+        </div>
+        <div class="">
+            <img src="assets/img/tyoukoku.webp" alt="">
+            <h2 class="spot-title">彫刻の森美術館</h2>
+            <p>日本初の野外美術館として、ロダンやムーアなどの作品を散策気分で観賞できることで有名。ピカソ館などの室内展示やカフェもあるので雨の日に訪れても満喫できます。</p>
+        </div>
+        <div class="">
+            <img src="assets/img/asinoko.webp" alt="">
+            <h2 class="spot-title">芦ノ湖</h2>
+            <p>箱根観光で外せない芦ノ湖。富士山を望む絶好のロケーションはもちろん、観光船でのクルージングも楽しみの一つです。湖畔には地元食材を使ったカフェやレストランが多数。</p>
+        </div>
+        <div class="">
+            <img src="assets/img/garasu.webp" alt="">
+            <h2 class="spot-title">箱根ガラスの森美術館</h2>
+            <p>15世紀から18世紀のヨーロッパ貴族に愛されたヴェネチアン・グラスを中心に、貴重なグラス作品約100点を展示。エントランスを彩る、約16万粒のクリスタルガラスのアーチも必見！            </p>
+        </div>
+        <div class="">
+            <img src="assets/img/gouraonnsenn.webp" alt="">
+            <h2 class="spot-title">強羅温泉</h2>
+            <p>箱根登山鉄道の最終駅、強羅にある温泉地。透明や乳白色、茶褐色など5色の異なる温泉は「五色パステル温泉」と呼ばれ、美肌やストレス解消など効能もさまざま。</p>
+        </div>
+        <div class="">
+            <img src="assets/img/kaizokusenn.webp" alt="">
+            <h2 class="spot-title">箱根海賊船</h2>
+            <p>ヨーロッパや北欧の戦艦をモデルにした観光船で、本格的な装飾も見どころ。芦ノ湖にある３つの港から乗船でき、富士山や箱根神社の赤い鳥居などの絶景ポイントを約60分かけて周遊します。</p>
+        </div>
+    </div><!-- /.grid -->
+    <footer>
+        <div class="wrapper">
+            <p><small>&copy; 2023 POSSE </small></p>
+        </div>
+    </footer>
 </body>
 </html>
 <script src="https://yubinbango.github.io/yubinbango/yubinbango.js"charset="UTF-8"></script>
