--- a/index.html
+++ b/index.html
@@ -6,30 +6,56 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/img/icons8-インターネット-100.png">
 </head>
 <body>
     <header class="header">
-        <h1><a href="index.html"><img class="logo" src="./assets/img/logo.svg" alt="WCBカフェ ホーム"></a></h1>
+        <h1><a href="index.html"><img class="logo" src="./assets/img/logo_transparent.png" alt="WCBカフェ ホーム"></a></h1>
         <nav>
             <ul class="main-nav">
                 <li><a href="#setumei">Purpose</a></li>
                 <li><a href="#osusume">Recommend</a></li>
-                <li><a href="#plan">Sample Plan</a></li>
+                <li><a href="#sankou">Sample Plan</a></li>
             </ul>]
         </nav>
     </header>
     <div class="mv">
         <div class="item active">
-            <img class="mainImage" src="./assets/img/268151.jpg" alt>
+            <img class="mainImage" src="./assets/img/hakone01.jpg" alt>
         </div>
         <div class="item">
-            <img class="mainImage" src="./assets/img/IMG_20230521_150118.jpg" alt>
+            <img class="mainImage" src="./assets/img/hakone03.jpg" alt>
         </div>
         <div class="item">
-            <img class="mainImage" src="./assets/img/LINE_ALBUM_第5回新人ハッカソン_231011.jpg" alt>
+            <img class="mainImage" src="./assets/img/hakone04.jpg" alt>
         </div>
     </div>
-    <!--目的明示セクション-->
+<!-- サイトの使い方セクション -->
+<h2 class="heading02" id="setumei"><span>このサイトの使い方！！</span></h2>
+<div class="bl_media_container">
+    <div class="bl_media_itemWrapper">
+        <div class="bl_media_item">
+        <p class="img"><img src="./assets/img/spot.svg" alt=""></p>
+        <h3 class="use-title">注目スポットの紹介</h3>
+        <p class="use">旅行プランを実際に組み立てる際に我々の提示する注目スポットを参考にして頂くことができます！</p>
+        </div>
+    </div>
+    <div class="bl_media_itemWrapper">
+        <div class="bl_media_item">
+            <br>
+        <p class="img"><img src="./assets/img/planning.jpg" alt=""></p>
+        <h3 class="use-title">モデルプランの提示</h3>
+        <p class="use">旅行プランを組み立てる際に役立つモデルプランをご紹介しますのでご参考にしてください！！</p>
+        </div>
+    </div>
+    <div class="bl_media_itemWrapper">
+        <div class="bl_media_item">
+        <p class="img"><img src="./assets/img/todolist.jpg" alt=""></p>
+        <h3 class="use-title">To-do listの作成</h3>
+        <p class="use">全員が主体性をもって今回の旅行に参加していくためのTo-do listをご自身で作ることができます！</p>
+        </div>
+    </div>
+</div>
     
     <!-- おすすめスポットセクション -->
     <h2 class="heading02" id="osusume"><span>箱根の注目スポット！！</span></h2>
@@ -158,7 +184,7 @@
         </div>
     </section>
     <div class="flex justify-center items-center">
-        <a href="./index2.html" class="btn-text-3d">タスク管理サイトはこちら</a>
+        <a href="./index2.html" class="btn-text-3d">➪タスク管理サイトはこちら</a>
     </div>
     <footer>
         <div class="wrapper">
