--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
                 <li><a href="#setumei">Purpose</a></li>
                 <li><a href="#osusume">Recommend</a></li>
                 <li><a href="#sankou">Sample Plan</a></li>
-            </ul>]
+            </ul>
         </nav>
     </header>
     <div class="mv">
         <div class="item active">
-            <img class="mainImage" src="./assets/img/hakone01.jpg" alt>
+            <img class="mainImage" src="./assets/img/kyuukyo2.jpg" alt>
         </div>
         <div class="item">
-            <img class="mainImage" src="./assets/img/hakone03.jpg" alt>
+            <img class="mainImage" src="./assets/img/hekone11.jpg" alt>
         </div>
         <div class="item">
-            <img class="mainImage" src="./assets/img/hakone04.jpg" alt>
+            <img class="mainImage" src="./assets/img/kyuukyo3.jpg" alt>
         </div>
     </div>
 <!-- サイトの使い方セクション -->
@@ -57,7 +57,7 @@
     </div>
 </div>
     
-    <!-- おすすめスポットセクション -->
+<!-- おすすめスポットセクション -->
     <h2 class="heading02" id="osusume"><span>箱根の注目スポット！！</span></h2>
     <div class="wrapper grid">
         <div class="">
@@ -106,6 +106,7 @@
             <p>ヨーロッパや北欧の戦艦をモデルにした観光船で、本格的な装飾も見どころ。芦ノ湖にある３つの港から乗船でき、富士山や箱根神社の赤い鳥居などの絶景ポイントを約60分かけて周遊します。</p>
         </div>
     </div><!-- /.grid -->
+
     <h2 class="heading02" id="sankou"><span>参考　旅行プラン！</span></h2>
     <section id="daily" class="section daily">
         <div class="section-body">
