--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>TODO-List</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="assets/img/icons8-インターネット-100.png">
 </head>
 <body class="bg-gray-100 font-serif text-base">
 
